# v4l2camera

./: CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.h  cameralabel.cpp  cameralabel.h  imageprocess.cpp  imageprocess.h  logger.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reallocator.hpp  settingdialog.cpp  settingdialog.h  settingdialog.ui  v4l2camera.cpp  v4l2camera.h  v4l2camera.pro  v4l2device.cpp  v4l2device.h  v4l2param.cpp  v4l2param.h  yolov5.cpp  yolov5.h
camera/: camera.cpp  camera.h  jpegwrap.cpp  jpegwrap.h  strings.hpp  usbhotplug.cpp  usbhotplug.h
src/: imageprocess.cpp  imageprocess.h  main.cpp  mainwindow.cpp  mainwindow.h  settingdialog.cpp  settingdialog.h  yolov5.cpp  yolov5.h
test/: test.cpp
